--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,42 @@ img {
 .superinfo p, superinfo a {
 	margin: 0 10px 10px 10px;
 }
+
+.menu-bg {
+	background-color: #2c70ff;
+}
+
+.menu {
+	max-width: 960px;
+	margin: 0 auto;
+	padding: 15px 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.menu a {
+	color: white;
+}
+
+.menu-logo a {
+	font-size: 2.25em;
+	font-weight: bold;
+	margin: 0 10px;
+}
+
+.menu-nav ul {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.menu-nav a {
+	font-size: 1.25em;
+	display: block;
+	padding: 10px;
+}
+
+.menu-nav a:hover {
+	color: #2c70ff;
+}
