Add hobbies topic

--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,11 @@ img {
 	margin-bottom: .5em;
 }
 
-.sobre-imgs {
-	flex: 1 1 160px;
-	margin-bottom: 5px;
-}
-.sobre-imgs {
-	margin-bottom: 10px;
+.sobre-img {
+	flex: 1 1 130px;
+	align-items: flex-end;
+	margin: 0 10px;
+	
 }
 
 .sobre-info p {
@@ -128,4 +127,44 @@ img {
 	line-height: 1.4;
 	margin-bottom: 1em;
 	color: #7c7c7c;
+}
+
+.hobbies {
+	max-width: 960px;
+	margin: 60px auto;
+}
+
+.hobbies h1 {
+	font-size: 3em;
+	margin: 0 10px 60px 10px;
+}
+
+.hobbies h2 {
+	font-size: 3em;
+	color: #a4a4a4;
+	background: #f7f7f7;
+	padding: 60px 20px;
+}
+
+.purple {
+	border-top: 8px solid #ae81ff;
+}
+
+.pink {
+	border-top: 8px solid #f9265e;
+}
+
+.blue {
+	border-top: 8px solid #66d9eb;
+}
+
+.hobbies-container{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-end;
+}
+
+.hobbies-item {
+	flex: 1 1 150px;
+	margin: 10px;
 }
