Add hablidades topic

--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,51 @@ img {
 	flex: 1 1 150px;
 	margin: 10px;
 }
+
+.habilidades {
+	border-top: 2px solid darkslateblue;
+	border-bottom: 2px solid darkslateblue;
+	max-width: 960px;
+	margin: 60px auto;
+	padding: 60px 0;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.qualidade-item {
+	flex: 1 1 300px;
+	margin: 10px;
+}
+
+.qualidade-item h2 {
+	font-size: 2.25em;
+	color: #a4a4a4;
+	margin-bottom: 20px;
+}
+
+.qualidade-item h2::before {
+	content: '';
+	display: inline-block;
+	width: 8px;
+	height: 30px;
+	margin-right: 10px;
+}
+
+.qualidade-item:nth-of-type(3n+1) h2::before {
+	background: #ae81ff;
+}
+
+.qualidade-item:nth-of-type(3n+2) h2::before {
+	background: #f9265e;
+}
+
+.qualidade-item:nth-of-type(3n+3) h2::before {
+	background: #66d9eb;
+}
+
+.qualidade-item p {
+	font-size: 1.25em;
+	line-height: 1.4;
+	color: #7c7c7c;
+
+}
